--- a/css/content.css
+++ b/css/content.css
@@ -267,9 +267,6 @@ html {
     width: 304px;
     display: block;
 }
-.body > .body-content > .content-gameplay > .gameplay-slide > .slide-menu > .slide-item.hide{
-    display:none;
-}
 .body > .body-content > .content-gameplay > .gameplay-slide > .slide-menu > .slide-item {
     display:inline;
 }
@@ -307,6 +304,30 @@ html {
     cursor: pointer;
 }
 
+.hide {
+    display: none !important;
+}
+
+#btn-up {
+    cursor: pointer;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    text-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    box-shadow: rgb(0 0 0 / 5%) 0px 0px 10px;
+    background-color: rgba(232, 97, 84, 0.8);
+    border-radius: 5px;
+    opacity: 0.6;
+    transition: opacity 0.3s ease 0s, visibility 0.3s ease 0s, background-color 0.3s ease 0s;
+}
 
 @media screen and (min-width: 1024px){
   
