--- a/css/content-change.css
+++ b/css/content-change.css
@@ -66,6 +66,7 @@ h3 {
 }
 .header > .desktop > .menu-item {
     background-color: rgba(22, 58, 80,0.8);
+    line-height: 0;
 }
 .header > .desktop > .menu-item > .menu-item-logo{
     max-width: 250px;
@@ -73,7 +74,7 @@ h3 {
     margin-right: auto;
     display: block;
     position: relative;
-    top: 17px;
+    top: 10px;
 }
 
 .header > .desktop > .menu-item > .item-left
@@ -101,7 +102,7 @@ h3 {
 .header > .desktop > .menu-item > .item-left {
     position: relative;
     right: 300px;
-    top: 48px;
+    top: 34px;
 }
 .header > .desktop > .menu-item > .item-left > a 
 ,.header > .desktop > .menu-item > .item-right > .item-right-left > a{
@@ -123,7 +124,7 @@ h3 {
 .header > .desktop > .menu-item > .item-right {
     position: relative;
     left: 300px;
-    top: -38px;
+    top: -37px;
 }
 .header > .desktop > .menu-item > .item-right > .item-right-left {
     position: relative;
@@ -206,7 +207,7 @@ h3 {
     text-align: center;
     color: white;
     position: relative;
-    top: -16px;
+    top: 77px;
     z-index: 0;
 }
 .header-info-token > p{
@@ -410,7 +411,10 @@ img[class^="homectr_"]:hover {
     margin: 0 auto;
     display: block;
 }
-
+.body > .body-content > .content-gameplay > .gameplay-header > h2 > span{
+    color: rgba(255, 255, 255, 0.1);
+    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+}
 /*Slide show */
 .body > .body-content > .content-gameplay > .gameplay-slide > .slide-menu {
     margin: 0 auto;
@@ -797,6 +801,10 @@ img[class^="mobactr_"].inactiveRight
 @media screen and (min-width: 1024px){
     .header > .desktop {
         display: block;
+        position: fixed;
+        margin: 0 auto;
+        z-index: 100;
+        width: 100%;
     }
 
     h2 {
