--- a/css/content-change.css
+++ b/css/content-change.css
@@ -243,6 +243,7 @@ h3 {
     position: fixed;
     bottom: 0px;
     width: 100%;
+    z-index: 300;
 }
 .footer > .mobile > .footer-menu {
     margin: 0 auto;
