--- a/css/content-change.css
+++ b/css/content-change.css
@@ -272,9 +272,10 @@ h3 {
     color: white;
     background: #34a853;
     border-radius: 32px;
-    padding: 15px 10px;
+    padding: 9px 10px;
     font-weight: bold;
     text-transform: uppercase;
+    margin-top: 10px;
 }
 
 .float-right {
